--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
 
     
 
@@ -163,7 +163,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Built in alarm system that arms automatically when the last person leaves the house. Video doorbell and camera integration available. Movement sensors that can trigger scenes - turn on lights and notify you.</p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Built in alarm system integration which will arm automatically when the last person leaves the house. Video doorbell and camera integration available. Movement sensors that can trigger scenes - turn on lights and notify you.</p>
                     </div>
                 </div>
 
@@ -225,7 +225,7 @@
                     </div>
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            Blind motors can be easily fitted to existing manual roller or venetian blinds and curtains too! Got an existing blind and infra red remote? They can be utilised and included as part of the solution.<br></p>
+                            Blind motors can be easily fitted to existing manual roller or venetian blinds and curtains too! Got existing motorised blinds?They can be utilised and included as part of the solution.<br></p>
                     </div>
                 </div>
             </div>
@@ -269,7 +269,7 @@
     </div>
 </section>
 
-<section once="footers" class="cid-sL8rkNbMH7" id="footer7-68">
+<section once="footers" class="cid-sLFjqL2T71" id="footer7-6c">
 
     
 
