--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     
 
-    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm bg-color transparent">
+    <nav class="navbar navbar-expand beta-menu navbar-dropdown align-items-center navbar-fixed-top navbar-toggleable-sm">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <div class="hamburger">
                 <span></span>
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">how to create your own site for free</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
+<section class="engine"><a href="https://mobirise.info/l">free site templates</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
 
     
 
