--- a/thermostat.html
+++ b/thermostat.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
+<section class="engine"><a href="https://mobirise.info/p">website templates free download</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
 
     
 
