--- a/blinds.html
+++ b/blinds.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
+<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
 
     
 
