--- a/lighting.html
+++ b/lighting.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build your own website for free</a></section><section class="header1 cid-spawN8CQgz" id="header16-j">
+<section class="engine"><a href="https://mobirise.info/n">simple website templates</a></section><section class="header1 cid-spawN8CQgz" id="header16-j">
 
     
 
