--- a/blinds.html
+++ b/blinds.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/a">online web builder</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
+<section class="engine"><a href="https://mobirise.info/a">online site builder</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
 
     
 
@@ -84,7 +84,7 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
-                     <p>Have your blinds respond when the air conditioning activates or when the house is armed shut the blinds when you are not at home.&nbsp;<span style="font-size: 1rem;">Open up a world of possibilities with motorised roller blinds. It will add ease, convenience and comfort, while saving money on your energy bills.</span></p>
+                     <p>Have your blinds respond when the air conditioning activates or when the house is armed at night ensure the blinds are closed. <span style="font-size: 1rem;">Open up a world of possibilities with motorised roller blinds. It will add ease, convenience and comfort, while saving money on your energy bills.</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
                      <p><span style="font-size: 1rem;">Retro fit existing manual blinds, or integrate your existing motorised blinds. &nbsp;Many customers want to upgrade their existing blinds without having to replace them and our 240 volt or battery solutions cater to that requirement. Most popular brands are Somfy, Acmeda.. however we work with many more.</span><br></p>
@@ -199,7 +199,7 @@ Now it's possible with small motors (or switches if you already have motors) tha
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
