--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Home Page">
   
   
-  <title>House-mate | Home</title>
+  <title>House-mate | House-mate</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
 
     
 
@@ -126,7 +126,7 @@
                     </div>                
 
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Connect to any component in your connected home from anywhere in the world via a single app on your iphone. Authenticates using your AppleID.</p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Securely connect to any component in your home from anywhere in the world via a single app on your iphone.</p>
                     </div>
                 </div>
 
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                     <div class="card-box">
-                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Utilise HomeKit software on your iPhone for complete touch control, or instruct Siri to control any component of your connected home.</p>
+                        <p class="mbr-text mbr-section-text mbr-fonts-style display-7">Utilise HomeKit software on your iPhone to toggle switches and thermostats, or instruct Siri to control any component of your connected home.</p>
                     </div>
                 </div>
             </div>
@@ -210,7 +210,7 @@
 
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            Lighting solution that compliments your existing home. &nbsp;Use your existing switches and lights.<br>No need to reaplce them.<br>"Siri, turn off the downstairs lights".</p>
+                            Lighting solution that compliments your existing home. &nbsp;Use your existing switches and lights.<br>No need to replace them.<br>"Siri, turn off the downstairs lights".</p>
                     </div>
                 </div>
 
@@ -225,7 +225,7 @@
                     </div>
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            Blind motors can be easily fitted to existing manual roller or venetian blinds and curtains too! Got existing motorised blinds?They can be utilised and included as part of the solution.<br></p>
+                            Blind motors can be fitted to existing curtains and blinds (roller or venetian). Got existing motorised blinds? They can be utilised and included as part of the solution.<br></p>
                     </div>
                 </div>
             </div>
@@ -247,7 +247,7 @@
 
                     <div class="card-box">
                         <p class="mbr-text mbr-section-text mbr-fonts-style display-7">
-                            Garage door control with real time open/closed status that can be fiited to most existing motors. &nbsp;Place a camera in the garage, accept deliveries and then close the garage door all from one app.</p>
+                            Garage door control with real time open/closed status that can be attached to most common brands. &nbsp;Place a camera in the garage and accept deliveries, then close the garage door all from one app.</p>
                     </div>
                 </div>
 
@@ -309,7 +309,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
