--- a/power.html
+++ b/power.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/v">html templates</a></section><section class="header1 cid-ssqChqcvDx" id="header16-3d">
+<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header1 cid-ssqChqcvDx" id="header16-3d">
 
     
 
@@ -86,7 +86,7 @@
                      <p>Smart power points are a very affordable way of gaining control at the outlet.&nbsp;<span style="font-size: 1rem;">Whether it be a coffee machine, a lamp, an electric blanket or a pump... install a smart on-wall outlet.</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p><span style="font-size: 1rem;">They can be plugged in anywhere and easily controlled manually. &nbsp;They are also very easy to move around your home if required.</span></p>
+                     <p><span style="font-size: 1rem;">They can be plugged in anywhere and easily controlled manually. Simple to move around your home if required.&nbsp;</span></p>
                 </div>
                 
             </div>
@@ -199,7 +199,7 @@
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
