--- a/faq.html
+++ b/faq.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="mbr-section content5 cid-swkPXUJ8Zs" id="content5-4v">
+<section class="engine"><a href="https://mobirise.info/f">simple web builder</a></section><section class="mbr-section content5 cid-swkPXUJ8Zs" id="content5-4v">
 
     
 
@@ -131,7 +131,7 @@ The installation duration is dependent on the scope of the job.  The first phase
   <script src="assets/theme/js/script.js"></script>
   
   
-  <input name="animation" type="hidden">
-   <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+ <div id="scrollToTop" class="scrollToTop mbr-arrow-up"><a style="text-align: center;"><i class="mbr-arrow-up-icon mbr-arrow-up-icon-cm cm-icon cm-icon-smallarrow-up"></i></a></div>
+    <input name="animation" type="hidden">
   </body>
 </html>
