--- a/cases.html
+++ b/cases.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">free css templates</a></section><section class="header1 cid-sLGkwv9VPU" id="header16-6f">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header1 cid-sLGkwv9VPU" id="header16-6f">
 
     
 
@@ -168,7 +168,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            Zamo's House</h4>
+                            Townhouse</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             text text</p>
                     </div>
@@ -193,7 +193,7 @@
                         <img src="assets/images/background3.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Goz's House</h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Large Caulfield Retrofit</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                             text</p>
                     </div>
@@ -206,8 +206,7 @@
                         <img src="assets/images/background4.jpg" alt="Mobirise">
                     </div>
                     <div class="card-box">
-                        <h4 class="card-title pb-3 mbr-fonts-style display-7">
-                            Unnamed House</h4>
+                        <h4 class="card-title pb-3 mbr-fonts-style display-7">Large Malvern Retrofit</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
                            text</p>
                     </div>
