--- a/sensors.html
+++ b/sensors.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section class="header1 cid-sF0xnFJcca" id="header16-56">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header1 cid-sF0xnFJcca" id="header16-56">
 
     
 
