--- a/blinds.html
+++ b/blinds.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/i">free web creation software</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
+<section class="engine"><a href="https://mobirise.info/c">free website builder</a></section><section class="header1 cid-spVLp8F7MJ" id="header16-2e">
 
     
 
@@ -144,7 +144,7 @@ Now it's possible with small motors (or switches if you already have motors) tha
             <div class="card p-3 col-12 col-md-6 col-lg-4">
                 <div class="card-wrapper">
                     <div class="card-img">
-                        <img src="assets/images/bl3-1-460x570.png" alt="Mobirise" title="">
+                        <img src="assets/images/blind3-297x641.jpg" alt="Mobirise" title="">
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">HomeKit Control</h4>
