--- a/cases.html
+++ b/cases.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">how to build a website for free</a></section><section class="header1 cid-sLGkwv9VPU" id="header16-6f">
+<section class="engine"><a href="https://mobirise.info/y">html website templates</a></section><section class="header1 cid-sLGkwv9VPU" id="header16-6f">
 
     
 
@@ -107,7 +107,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Large Caulfield Home</h4>
                         <p class="mbr-text mbr-fonts-style display-7">
-                            The client desired a retro fit that could harness the full power of House-mate. Starting with lighting, the solution progressed to gates, garage door, TV, amplifier, irrigation.<br>No wall switches were changed, 28 light circuits now controlled and complete voice activation delivered. Thermostat was the final piece for this client and integration to large Daikin units was procured.</p>
+                            The client desired a retro fit that could harness the full power of House-mate. Starting with lighting, the solution progressed to gates, garage door, TV, amplifier, irrigation.<br>No wall switches were changed, 28 light circuits controllable with complete voice activation delivered. Thermostat was the final piece for this client with integration to large Daikin units procured.</p>
                     </div>
                 </div>
             </div>
@@ -132,7 +132,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">East Brighton Unit</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Client wanted thermostats, a security system, control of 8 light circuits, TV control, and some on-wall power points.<br>Procured a Nest thermostat to control a Brivis central heating unit, introduced client TV into Homekit&nbsp;</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Client wanted thermostats, a security system, control of 8 light circuits, TV control, and some on-wall power points.<br>Procured a Nest thermostat to control a Brivis central heating unit, introduced client TV into Homekit.&nbsp;</p>
                     </div>
                 </div>
             </div>
@@ -144,7 +144,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">Peninsula Mansion</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Currently in the design phase, this is a large scale project that involves all aspects of House-mate. &nbsp;We have been working with electricians, irrigation, heating/cooling to ensure all systems are fully compatible before purchase.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">This is a large scale project involves all aspects of the House-mate solution. &nbsp;We have been working with electricians, irrigation, heating/cooling to ensure all systems are fully compatible before purchase.</p>
                     </div>
                 </div>
             </div>
