--- a/cbus.html
+++ b/cbus.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site</a></section><section class="header1 cid-stGQMw1UDV" id="header16-4p">
+<section class="engine"><a href="https://mobirise.info/i">free website creation software</a></section><section class="header1 cid-stGQMw1UDV" id="header16-4p">
 
     
 
@@ -109,7 +109,7 @@
                     </div>
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">First step</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">In order for your CBUS to talk to House-mate, a CBUS piece of equipment called the 5500CNI needs to be installed.<br>This needs to be installed by a qualified CBUS electrician. RRP $850, install ~$350.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">In order for your CBUS to talk to House-mate, a CBUS piece of equipment (5500CNI) needs to be installed&nbsp;by a qualified CBUS electrician. RRP $850, install ~$350.</p>
                     </div>
                 </div>
             </div>
