--- a/power.html
+++ b/power.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="header1 cid-ssqChqcvDx" id="header16-3d">
+<section class="engine"><a href="https://mobirise.info/e">how to make a website</a></section><section class="header1 cid-ssqChqcvDx" id="header16-3d">
 
     
 
@@ -120,7 +120,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Smart power points</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">A number of compatible brands produce smart power points. Many can turn a regular power point into a USB charger at the same time. Schedule the power point to operate at certain times or link it to a scene.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">A number of compatible brands produce smart power points. Many can turn a regular power point into a USB charger at the same time. Schedule the power point to operate at certain times or link its operation to a scene.</p>
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Easy and simple to use</h4>
                         <p class="mbr-text mbr-fonts-style display-7">The power point remains completely accessible and can be operated manually.
-<br>However, these devices also pack alot of smarts and can be programmed. Turn a light on when the doorbell detects movement whilst the house is armed.</p>
+<br>These devices can be easily programmed. Turn a light on when the doorbell detects movement whilst the house is armed.</p>
                     </div>
                 </div>
             </div>
