--- a/security.html
+++ b/security.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">how to make your own site for free</a></section><section class="header1 cid-spZo94Lxj9" id="header16-2t">
+<section class="engine"><a href="https://mobirise.info/z">best website templates</a></section><section class="header1 cid-spZo94Lxj9" id="header16-2t">
 
     
 
@@ -120,8 +120,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Unparalled security</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">
-                            Sophisticated and affordable cameras, either wired or wireless that can detect motion and record whats happening. See real time what every camera is seeing. Purpose built hard wired alarm systems are available and integrate should you wish for more than just cameras.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Affordable cameras that can detect motion and record whats happening. See real time what every camera is seeing. House-mate integrates with industry leading alarm systems such as Paradox, Bosch and more...</p>
                     </div>
                 </div>
             </div>
@@ -134,7 +133,7 @@
                     <div class="card-box">
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Door and window sensors</h4>
-                        <p class="mbr-text mbr-fonts-style display-7">Arm the perimeter of your home automatically when you go to bed. Door and window sensors are a very effective way to secure the home and can be wired or run on battery.</p>
+                        <p class="mbr-text mbr-fonts-style display-7">Secure the perimeter of your home automatically when you go to bed. Door and window sensors are a very effective way to arm the home and can be wired or run on battery.</p>
                     </div>
                 </div>
             </div>
