--- a/thermostat.html
+++ b/thermostat.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
+<section class="engine"><a href="https://mobirise.info/h">create your own web page</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
 
     
 
@@ -83,7 +83,7 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
-                     <p>Smart thermostats connect to your Wi-Fi network and can be controlled either via the manufacturers app and HomeKit, delivering control to your iPhone, iWatch, iPad.&nbsp;<span style="font-size: 1rem;">These thermostats can respond as part of an automation, Eg: turn the heating off when nobody is home. &nbsp;</span></p><p>
+                     <p>Smart thermostats connect to your Wi-Fi network and can be controlled either via the manufacturers app and/or HomeKit, delivering control to your iPhone, iWatch, iPad.&nbsp;<span style="font-size: 1rem;">These thermostats can respond as part of an automation, Eg: turn the heating off when nobody is home. &nbsp;</span></p><p>
 </p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
@@ -122,7 +122,7 @@
                         <h4 class="card-title pb-3 mbr-fonts-style display-7">
                             Smart Thermostats&nbsp;</h4>
                         <p class="mbr-text mbr-fonts-style display-7">There are many different types of smart thermostats.
-The Nest thermostat is popular (due to its sleek appearance.. but it's also the most expensive at $350 unfitted). Alternatives start from $180.&nbsp;<br></p>
+The Nest thermostat is popular (due to its sleek appearance.. but it's also the most expensive at $350 unfitted). Alternatives start from $180 and they are wired directly to your existing air conditioning system.<br></p>
                     </div>
                 </div>
             </div>
