--- a/remote.html
+++ b/remote.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-sIMTM9Ac6q" id="header16-5n">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header1 cid-sIMTM9Ac6q" id="header16-5n">
 
     
 
@@ -87,7 +87,7 @@
                      <p>The number of remote controls can quickly add up when you count TVs, Amplifiers, Foxtel, AppleTV, Projectors, etc etc. &nbsp;<span style="font-size: 1rem;">Capture selected buttons from your remote controls and operate them directly from your phone.</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p>Record the buttons being pressed in any sequence for any duration. For example: turn on the TV, select a particular input, turn on the amplifier, and then turn the Foxtel on - all initiated from the press of a single button on your phone, or by voice.</p>
+                     <p>Record the buttons being pressed in any sequence for any duration. For example: turn on the TV, select an input, turn on the amplifier, and then turn the Foxtel on - all initiated from the press of a single button on your phone, or by voice.</p>
                 </div>
                 
             </div>
