--- a/sensors.html
+++ b/sensors.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">easy web builder</a></section><section class="header1 cid-sF0xnFJcca" id="header16-56">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap template</a></section><section class="header1 cid-sF0xnFJcca" id="header16-56">
 
     
 
@@ -86,7 +86,7 @@
                      <p><span style="font-size: 1rem;">A typical home has plenty of devices connected to the internet.</span></p><p><span style="font-size: 1rem;">There are many reasons why a network might misbehave, so wouldnt it be handy to see at a glance when devices are connected or not without having to log onto the router or call an I.T professional?</span></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
-                     <p>Whether it be a networked printer, a phone or watch, a chromecast or a laptop... any device that you wish to know the network connection status.</p><p>See all devices in a single pane view and optionally set it up to notify you if a device is either connected or disconnected. &nbsp;Easily monitor devices&nbsp;<span style="font-size: 1rem;">at a remote location.</span></p>
+                     <p>Whether it be a networked printer, a phone or watch, a chromecast or a laptop... any device that you wish to know its network connection status.</p><p>See all devices in a single pane view and optionally set it up to notify you if a device is either connected or disconnected. &nbsp;Easily monitor devices&nbsp;<span style="font-size: 1rem;">at a remote location.</span></p>
                 </div>
                 
             </div>
