--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
+<section class="engine"><a href="https://mobirise.info/n">free simple site templates</a></section><section class="cid-sqASloPFoy mbr-fullscreen mbr-parallax-background" id="header2-37">
 
     
 
@@ -109,7 +109,7 @@
 
     <div class="container">
         <h2 class="mbr-section-title pb-2 mbr-fonts-style display-2">One app to control the lot</h2>
-        <h3 class="mbr-section-subtitle pb-3 mbr-fonts-style display-5">Finally a solution that suits retrofits or new builds and delivers truely centralised home control. You choose whether its via&nbsp;Apple HomeKit™, Google Home™, or Amazon Alexa™.<br></h3>
+        <h3 class="mbr-section-subtitle pb-3 mbr-fonts-style display-5">Finally a solution that suits retrofits or new builds and delivers truly centralised home control. You choose whether its via&nbsp;Apple HomeKit™, Google Home™, or Amazon Alexa™.<br></h3>
 
         <div class="media-container-row pt-5">
             <div class="block-content align-right">
