--- a/warranty.html
+++ b/warranty.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="mbr-section content5 cid-sM5y2CuIQU" id="content5-6r">
+<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="mbr-section content5 cid-sM5y2CuIQU" id="content5-6r">
 
     
 
