--- a/thermostat.html
+++ b/thermostat.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap website templates</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header1 cid-ssrQT3UV36" id="header16-3w">
 
     
 
@@ -101,7 +101,7 @@
     
     <figure class="mbr-figure align-center container">
         <div class="video-block" style="width: 75%;">
-            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/PGOGVeRy81c?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
+            <div><iframe class="mbr-embedded-video" src="https://www.youtube.com/embed/LAmMxK60ySs?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" width="1280" height="720" frameborder="0" allowfullscreen></iframe></div>
         </div>
     </figure>
 </section>
