--- a/lighting.html
+++ b/lighting.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free website templates</a></section><section class="header1 cid-spawN8CQgz" id="header16-j">
+<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section class="header1 cid-spawN8CQgz" id="header16-j">
 
     
 
@@ -84,7 +84,7 @@
         <div class="media-container-row">
             <div class="row col-12 col-md-12">
                 <div class="col-12 mbr-text mbr-fonts-style col-md-6 display-7">
-                     <p><span style="font-size: 1rem;">When it comes to a smart home, lighting is one of the simplest ways to get going.</span></p><p><span style="font-size: 1rem;">Our lighting solution can be retro fitted into existing homes or installed into new homes. Use your existing lights and wiring circuits and control them by voice or presence.</span><br></p>
+                     <p><span style="font-size: 1rem;">Our lighting solution can be installed into existing homes or new homes. Use your existing lights and wiring circuits and control them by voice or presence.</span><br></p>
                 </div>
                 <div class="col-12 mbr-text mbr-fonts-style display-7 col-md-6">
                      <p><span style="font-size: 1rem;">Dimmable or non-dimmable switches are available to control your light circuits.</span><br></p><p>
