--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Contact Us">
   
   
-  <title>House-mate | Contact</title>
+  <title>House-mate Contact</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own website for free</a></section><section class="header1 cid-spaxVY7aMn" id="header16-n">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header1 cid-spaxVY7aMn" id="header16-n">
 
     
 
