--- a/terms.html
+++ b/terms.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Terms and Conditions">
   
   
-  <title>House-mate | Terms and Conditions</title>
+  <title>House-mate Terms and Conditions</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-sM5vh72ryB" id="content5-6n">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap theme</a></section><section class="mbr-section content5 cid-sM5vh72ryB" id="content5-6n">
 
     
 
