--- a/cases.html
+++ b/cases.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Case studies from completed installations">
   
   
-  <title>House-mate | Case Studies</title>
+  <title>House-mate Case Studies</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple website builder</a></section><section class="header1 cid-sLGkwv9VPU" id="header16-6f">
+<section class="engine"><a href="https://mobirise.info/p">web templates free download</a></section><section class="header1 cid-sLGkwv9VPU" id="header16-6f">
 
     
 
