--- a/warranty.html
+++ b/warranty.html
@@ -10,7 +10,7 @@
   <meta name="description" content="Warranty">
   
   
-  <title>House-mate | Warranty</title>
+  <title>House-mate Warranty</title>
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section content5 cid-sM5y2CuIQU" id="content5-6r">
+<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section content5 cid-sM5y2CuIQU" id="content5-6r">
 
     
 
